# ABACUS-agent-tools

./: README.md  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: autotest.yml
examples/google-adk/: checkresult.py
examples/google-adk/evalsets/: MD.evalset.json  SCF.evalset.json  phonon.evalset.json  relax.evalset.json
examples/my_agent/: agent.py
src/abacusagent/: create_template.py  env.py  google-adk-agent-template.py  init_mcp.py  main.py  version.py
src/abacusagent/modules/: abacus.py  bader.py  band.py  comm.py  cube.py  deeptb_tool.py  dos.py  elastic.py  eos.py  md.py  phonon.py  plot_dos_pdos.py  relax.py  run_dos.py  scf.py  structure_generator.py  vibration.py
src/abacusagent/modules/util/: comm.py  pyatb.py
src/util/: control.py
tests/: test_abacus.py  test_abacus_prepare.py  test_dos.py  test_rundos.py
tests/abacus/Si-sp/: log  metrics-ref.json  metrics.json  time.json
tests/plot_dos/: Si_gga_6au_100Ry_2s2p1d.orb
tests/plot_dos/OUT.diamond/: Orbital  PDOS
